If applied, this attempts to update the get and put controller for client support needs.

--- a/views/case_details/client_support_needs/_form-language.njk
+++ b/views/case_details/client_support_needs/_form-language.njk
@@ -1,6 +1,8 @@
 {{ xGovukAutocomplete({
-  id: "language",
-  name: "language",
+  id: "languageSupportNeeds",
+  name: "languageSupportNeeds",
+  value: currentLanguageSupportNeeds,
+  errorMessage: errorMessages.languageSupportNeeds if error,
   label: {
     text: t('forms.clientDetails.clientSupportNeeds.languageHint')
   },
