--- a/views/case_details/client_support_needs/_form.njk
+++ b/views/case_details/client_support_needs/_form.njk
@@ -9,31 +9,34 @@
 {% if error %}
   {{ errorSummary(error.errorSummaryList) }}
   {% set errorMessages = {
-    notes: {text: error.inputErrors.notes } if error.inputErrors.note
+    languageSupportNeeds: {text: error.inputErrors.languageSupportNeeds } if error.inputErrors.languageSupportNeeds,
+    notes: {text: error.inputErrors.notes } if error.inputErrors.notes
   } %}
 {% endif %}
 
 <form method="post" action="{{ formAction }}">
   <input type="hidden" name="_csrf" value="{{ csrfToken }}">
 
-  {% set language %}
+  {% set languageSupportNeeds %}
     {% include "./_form-language.njk" %}
   {% endset -%}
 
   {% set notes %}
-  {{ govukTextarea({
-    label: {
-      text: t('forms.clientDetails.clientSupportNeeds.notesTextAreaHint')
-    },
-    id: "notes",
-    name: "notes",
-    errorMessage: errorMessages.notes if error,
-    autocomplete: "off"
-  }) }}
+    {{ govukTextarea({
+      label: {
+        text: t('forms.clientDetails.clientSupportNeeds.notesTextAreaHint')
+      },
+      id: "notes",
+      name: "notes",
+      value: currentNotes,
+      errorMessage: errorMessages.notes if error,
+      autocomplete: "off"
+    }) }}
   {% endset -%}
 
   {{ govukCheckboxes({
-    name: "contact",
+    name: "clientSupportNeeds",
+    value: currentClientSupportNeeds,
     hint: {
       text: t('forms.clientDetails.clientSupportNeeds.checkBoxHint')
     },
@@ -54,7 +57,7 @@
         value: "languageSelection",
         text: t('forms.clientDetails.clientSupportNeeds.language'),
         conditional: {
-          html: language
+          html: languageSupportNeeds
         }
       },
       {
