Validation & Update tests
If applied:
- this includes  the validation for adding client support data
- adds a test for add client support needs controller
- moves languages for component into it's own JSON file called by controller by passing it to `locals` bit of the controller response

--- a/views/case_details/client_support_needs/_form.njk
+++ b/views/case_details/client_support_needs/_form.njk
@@ -18,7 +18,17 @@
   <input type="hidden" name="_csrf" value="{{ csrfToken }}">
 
   {% set languageSupportNeeds %}
-    {% include "./_form-language.njk" %}
+    {{ xGovukAutocomplete({
+      id: "languageSupportNeeds",
+      name: "languageSupportNeeds",
+      value: currentLanguageSupportNeeds,
+      errorMessage: errorMessages.languageSupportNeeds if error,
+      label: {
+        text: t('forms.clientDetails.clientSupportNeeds.languageHint')
+      },
+      formGroup: { classes: "govuk-!-width-one-half" },
+      items: languageItems
+    }) }}
   {% endset -%}
 
   {% set notes %}
@@ -36,7 +46,7 @@
 
   {{ govukCheckboxes({
     name: "clientSupportNeeds",
-    value: currentClientSupportNeeds,
+    values: currentClientSupportNeeds,
     hint: {
       text: t('forms.clientDetails.clientSupportNeeds.checkBoxHint')
     },
