If applied, this updates translation structure to make clearer what string belongs where.

--- a/views/case_details/third_party_details/add-client-third-party.njk
+++ b/views/case_details/third_party_details/add-client-third-party.njk
@@ -1,6 +1,6 @@
 {# Set template-specific variables #}
-{% set pageTitleKey = 'forms.clientDetails.thirdParty.pageTitleAdd' %}
-{% set headingKey = 'forms.clientDetails.thirdParty.pageH1Add' %}
+{% set pageTitleKey = 'forms.clientDetails.thirdParty.addPage;pageTitleAdd' %}
+{% set headingKey = 'forms.clientDetails.thirdParty.addPage.pageH1Add' %}
 {% set formActionUrl = "/cases/" + caseReference + "/client-details/add/third-party" %}
 
 {# Extend the shared base template #}
