--- a/views/case_details/client_support_needs/add-client-support-needs.njk
+++ b/views/case_details/client_support_needs/add-client-support-needs.njk
@@ -1,6 +1,6 @@
 {# Set template-specific variables #}
-{% set pageTitleKey = 'forms.clientDetails.clientSupportNeeds.pageTitleAdd' %}
-{% set headingKey = 'forms.clientDetails.clientSupportNeeds.pageH1Add' %}
+{% set pageTitleKey = 'forms.clientDetails.clientSupportNeeds.addPage.pageTitleAdd' %}
+{% set headingKey = 'forms.clientDetails.clientSupportNeeds.addPage.pageH1Add' %}
 {% set formActionUrl = "/cases/" + caseReference + "/client-details/add/support-need" %}
 
 {# Extend the shared base template #}
