--- a/views/case_details/client_support_needs/change-client-support-needs.njk
+++ b/views/case_details/client_support_needs/change-client-support-needs.njk
@@ -1,6 +1,6 @@
 {# Set template-specific variables #}
-{% set pageTitleKey = 'forms.clientDetails.clientSupportNeeds.pageTitleChange' %}
-{% set headingKey = 'forms.clientDetails.clientSupportNeeds.pageH1Change' %}
+{% set pageTitleKey = 'forms.clientDetails.clientSupportNeeds.changePage.pageTitleChange' %}
+{% set headingKey = 'forms.clientDetails.clientSupportNeeds.changePage.pageH1Change' %}
 {% set formActionUrl = "/cases/" + caseReference + "/client-details/change/support-need" %}
 
 {# Extend the shared base template #}
