--- a/views/case_details/third_party_details/change-client-third-party.njk
+++ b/views/case_details/third_party_details/change-client-third-party.njk
@@ -1,6 +1,6 @@
 {# Set template-specific variables #}
-{% set pageTitleKey = 'forms.clientDetails.thirdParty.pageTitleChange' %}
-{% set headingKey = 'forms.clientDetails.thirdParty.pageH1Change' %}
+{% set pageTitleKey = 'forms.clientDetails.thirdParty.changePage.pageTitleChange' %}
+{% set headingKey = 'forms.clientDetails.thirdParty.changePage.pageH1Change' %}
 {% set formActionUrl = "/cases/" + caseReference + "/client-details/change/third-party" %}
 
 {# Extend the shared base template #}
