--- a/views/base.njk
+++ b/views/base.njk
@@ -146,4 +146,5 @@
 {% block bodyEnd %}
   {# Run JavaScript at end of the <body>, to avoid blocking the initial render. #}
   <script type="module" nonce="{{ cspNonce }}" src="/js/{{getAsset('frontend-packages','min.js')}}"></script>
+  {% block additionalScripts %}{% endblock %}
 {% endblock %}
