--- a/views/case_details/client_support_needs/_base-client-support-needs.njk
+++ b/views/case_details/client_support_needs/_base-client-support-needs.njk
@@ -33,39 +33,38 @@
       {% include "case_details/client_support_needs/_form.njk" %}
     </div>
   </div>
-{% endblock %}
 
-{% block additionalScripts %}
-    <script nonce="{{ cspNonce }}">
-      document.addEventListener('DOMContentLoaded', function () {
-        function clearAccessibleAutocompleteSelectionWhenInputEmpty(inputId) {
-          const autocompleteInput = document.getElementById(inputId);
-          const selectElement = document.getElementById(inputId + '-select');
+  {# This script is used to trigger error validation for `accessible autocomplete` component, when the input filed is empty #}
+  <script nonce="{{ cspNonce }}">
+    document.addEventListener('DOMContentLoaded', function () {
+      function clearAccessibleAutocompleteSelectionWhenInputEmpty(inputId) {
+        const autocompleteInput = document.getElementById(inputId);
+        const selectElement = document.getElementById(inputId + '-select');
 
-          if (autocompleteInput && selectElement) {
-            function clearSelection() {
-              if (this.value.trim() === '') {
-                selectElement.value = '';
-                selectElement.selectedIndex = 0;
-              }
+        if (autocompleteInput && selectElement) {
+          function clearSelection() {
+            if (this.value.trim() === '') {
+              selectElement.value = '';
+              selectElement.selectedIndex = 0;
             }
-            autocompleteInput.addEventListener('input', clearSelection);
-            autocompleteInput.addEventListener('keyup', clearSelection);
-            return true;
           }
-          return false;
+          autocompleteInput.addEventListener('input', clearSelection);
+          autocompleteInput.addEventListener('keyup', clearSelection);
+          return true;
         }
+        return false;
+      }
 
-        const languageCheckbox = document.querySelector('input[value="languageSelection"]');
-        if (languageCheckbox) {
-          languageCheckbox.addEventListener('change', function () {
-            if (this.checked) {
-              setTimeout(() => clearAccessibleAutocompleteSelectionWhenInputEmpty('languageSupportNeeds'), 100);
-            }
-          });
-        }
+      const languageCheckbox = document.querySelector('input[value="languageSelection"]');
+      if (languageCheckbox) {
+        languageCheckbox.addEventListener('change', function () {
+          if (this.checked) {
+            setTimeout(() => clearAccessibleAutocompleteSelectionWhenInputEmpty('languageSupportNeeds'), 100);
+          }
+        });
+      }
 
-        clearAccessibleAutocompleteSelectionWhenInputEmpty('languageSupportNeeds');
-      });
-    </script>
+      clearAccessibleAutocompleteSelectionWhenInputEmpty('languageSupportNeeds');
+    });
+  </script>
 {% endblock %}
