If applied, this updates the typo in radio button

--- a/views/case_details/third_party_details/_form.njk
+++ b/views/case_details/third_party_details/_form.njk
@@ -125,8 +125,8 @@
         text: t('forms.clientDetails.thirdParty.relationshipToClient.parentOrGuardian')
       },
       {
-        value: t('forms.clientDetails.thirdParty.relationshipToClient.familyMemberOfFriend'),
-        text: t('forms.clientDetails.thirdParty.relationshipToClient.familyMemberOfFriend')
+        value: t('forms.clientDetails.thirdParty.relationshipToClient.familyMemberOrFriend'),
+        text: t('forms.clientDetails.thirdParty.relationshipToClient.familyMemberOrFriend')
       },
       {
         value: t('forms.clientDetails.thirdParty.relationshipToClient.professional'),
