--- a/views/cases/_new-partial.njk
+++ b/views/cases/_new-partial.njk
@@ -16,7 +16,7 @@
         { key: "fullName", text: t('components.table.columns.name'), link: "/cases/{{caseReference}}/client-details" },
         { key: "caseReference", text: t('components.table.columns.caseId') },
         { key: "dateOfBirth", text: t('components.table.columns.dateOfBirth') },
-        { key: "refCode", text: t('components.table.columns.details') },
+        { key: "outcomeDescription", text: t('components.table.columns.details') },
         { key: "dateReceived", text: t('components.table.columns.dateReceived'), sortable: true, classes: "govuk-table__header--numeric" , cellClasses: "govuk-table__cell--numeric" }
       ],
       sortBy: "dateReceived",
