If applied, this removes redundant variables and adds back in CONTACT_EMAIL to `base.njk`

--- a/views/base.njk
+++ b/views/base.njk
@@ -103,7 +103,7 @@
     tag: {
       text: config.SERVICE_PHASE
     },
-    html: t('components.phaseBanner.feedbackText') + t('components.phaseBanner.feedbackLinkTextHTML')
+    html: t('components.phaseBanner.feedbackText')  + "<a class='govuk-link' href='mailto:" + config.CONTACT_EMAIL + "'>give your feedback by email</a>."
   }) }}
   {% block backLink %}{% endblock %}
 {% endblock %}
