Updates sorting and pagination for CLA integration

--- a/views/cases/_new-partial.njk
+++ b/views/cases/_new-partial.njk
@@ -13,13 +13,13 @@
       id: "new-cases-table",
       data: data,
       columns: [
-        { key: "fullName", text: t('components.table.columns.name'), link: "/cases/{{caseReference}}/client-details" },
-        { key: "caseReference", text: t('components.table.columns.caseId') },
-        { key: "dateOfBirth", text: t('components.table.columns.dateOfBirth') },
-        { key: "refCode", text: t('components.table.columns.details') },
-        { key: "dateReceived", text: t('components.table.columns.dateReceived'), sortable: true, classes: "govuk-table__header--numeric" , cellClasses: "govuk-table__cell--numeric" }
+        { key: "full_name", text: t('components.table.columns.name'), link: "/cases/{{reference}}/client-details" },
+        { key: "reference", text: t('components.table.columns.caseId') },
+        { key: "date_of_birth", text: t('components.table.columns.dateOfBirth') },
+        { key: "outcome_description", text: t('components.table.columns.details') },
+        { key: "provider_assigned_at", text: t('components.table.columns.dateReceived'), sortable: true, classes: "govuk-table__header--numeric" , cellClasses: "govuk-table__cell--numeric" }
       ],
-      sortBy: "dateReceived",
+      sortBy: sortBy or "provider_assigned_at",
       sortOrder: sortOrder or "desc",
       basePath: "/cases/new"
     }) }}
@@ -28,6 +28,7 @@
   {% if pagination %}
     {{ paginationComponent({
       pagination: pagination,
+      sortBy: sortBy or "provider_assigned_at",
       sortOrder: sortOrder or "desc",
       basePath: "/cases/new"
     }) }}
