--- a/views/case_details/third_party_details/_form.njk
+++ b/views/case_details/third_party_details/_form.njk
@@ -109,6 +109,8 @@
     autocomplete: "off"
   }) }}
 
+{# The values for relationship have been added to the common section of the l18n config. This should use that as well, however we need to figure out what form we need to send the data back to CLA in. #}
+
   {{ govukRadios({
     name: "thirdPartyRelationshipToClient",
     value: currentThirdPartyRelationshipToClient,
