--- a/docs/source/documentation/index.html.md.erb
+++ b/docs/source/documentation/index.html.md.erb
@@ -1,5 +1,40 @@
-<!-- Do not delete this file it is the website entry point -->
+<!-- Masthead and call to action -->
+<main id="main" role="main">
+    
+<div class="app-masthead">
+  <div class="app-width-container">
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-full-from-desktop">
+        <h1 class="govuk-heading-xl app-masthead__title"> Manage Your Civil Cases <span style='font-size:42px;'></span></h1>
+        <p class="app-masthead__description">This service is for providers of Legal Aid to manage cases referred to them</p>
 
-# Manage your Civil Cases (MCC)
+          Quick start
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+          </svg>
+        </a>
+      </div>
 
-**Start here**
+    </div>
+  </div>
+</div>
+
+</main>
+
+# Who is this documentation for?
+This is technical documentation for developers and providers working with Manage Your Civil Cases.
+
+## Getting Started
+- [Getting Started](documentation/getting-started.html)
+
+## Features
+- [Features](documentation/features.html)
+
+## Testing
+- [Testing](documentation/testing.html)
+
+## Deployment
+- [Deployment](documentation/deployment.html)
+
+## Adding to the documentation
+If there's something missing, please either let us know and we'll add a new article, or if you're comfortable writing one yourself, PRs will be gratefully received.
